# without-objective

./: 2025-03-25-Without-Objective.md  2025-04-04-This-Markdown-is-a-Graph.md  CLAUDE.md  Organizing-Work.md  build.py  collect_post_history.py  justfile  llms.md  post_history.yaml  posts.yaml  resources.md  scrap.md
2025-04-08-Parsing-LLM-Output-Streams/: post.md
A-Structured-Information-System/: A-Structured-Information-System.md
A-Structured-Information-System/coffee_shop/: 001.step  002.step  003.step  004.step  005.step  README.md  features-to-problems.csv  problems-to-needs.csv  product-planning.csv  product-planning.yaml
Assessing-Technology-Readiness/: Assessing-Technology-Readiness.md  bibliography.yaml  bibtools.py  main.py  model-gaps-analysis.md  nvpsm-model-clarifications.md  pyproject.toml  research.md  research.yaml  software-readiness-findings.md
Code-Generation/: .env.example  README.md  compare_functions.py  generate_function.py  maker.py  refine_function.py
PNF-Editor/: .env.example  .gitignore  README.md  file_editor.py  justfile
Software-Metrics/: ttfr.py
Structured-Log-Pipes/: README.md  README.typ  analyze_data.py  fibwait.py  hash_items.py  main.py  make_logs.py  pyproject.toml  read_logs.py  scan_partition.py  slap.py  stat_partition.py
The-Bitter-Lesson-and-LLMs/: The-Bitter-Lesson-and-LLMs.md
TypstBlog/: README.md  build.py  posts.yaml
TypstBlog/src/: example-post.typ
docs/: index.html  manifest.json
hello-rust-apk/: README.md
hello-rust-apk/hello_android/: Cargo.toml
hello-rust-apk/hello_android/src/: lib.rs
p5/: index.html  sketch.js
templates/: index.html  post.html
tmiag/: net.py
(+41 files in other folders)
