[package]
name = "hello_android"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
egui = "0.29"
egui-winit = "0.29"
egui-wgpu = "0.29"
winit = "0.30"
wgpu = "23"
pollster = "0.3"

[package.metadata.android]
package = "com.example.hello_android"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 34